--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -775,6 +775,7 @@ button.fc-button.fc-button-primary.fc-prev-button {
 .message.ai {
   align-self: flex-start;
   border-radius: 20px;
+  padding: 10px;
   background-color: #edf2f6; /* Light gray background for the AI messages */
 }
 
