--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -10,6 +10,15 @@ body {
 .overflow-style-none::-webkit-scrollbar {
   display: none;
 }
+.truncate {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  width: 100%;
+}
+
 /* Hide scrollbar for IE, Edge and Firefox */
 .overflow-style-none {
   -ms-overflow-style: none; /* IE and Edge */
